# fazer

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/certs/: cert.pem  key.pem  nopass.pem
backend/json/: Cargo.toml
backend/json/src/: config.rs  entity.rs  field.rs  lib.rs  license.rs  mod.rs  repository.rs
backend/migrations/1_users/: up.sql
backend/migrations/2_tokens/: up.sql
backend/migrations/3_images/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/dbms/: handlers.rs  models.rs
backend/src/image/: handlers.rs  models.rs
backend/src/user/: handlers.rs  mod.rs  models.rs  repository.rs
backend/src/user/middleware/: auth.rs
backend/src/utils/: ftp.rs  json.rs  mod.rs  setup.rs  testing.rs  token_utils.rs
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/api/: User.tsx  axios.tsx  images.tsx
frontend/src/components/: Dropzone.tsx  ImageCard.tsx  Lens.tsx  Login.tsx  NavBar.tsx  Panel.tsx  Register.tsx  ResultSection.tsx  SampleConponent.tsx  SearchResult.tsx  app_comp.tsx  button1.tsx
frontend/src/constants/: index.js
frontend/src/pages/: Dashboard.tsx  Error.tsx  Home.tsx  Search.tsx
frontend/src/services/: LoginService.tsx  (+1 more)
misc/ftp/: Dockerfile
misc/nginx/: nginx.conf
python-backend/handlers/: cmp_handler.py  detection_handler.py
python-backend/setup_scripts/: .gitignore  api.py  requirements.txt  setupdb.py  utils.py
(+5 files in other folders)
