[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "json"
path = "json/src/mod.rs"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-identity = "0.5.0"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2_postgres = "0.18.1"
openssl = "0.10.45"
serde = "1.0.152"
chrono = {version = "0.4.23", features = ["serde"]}
serde_derive = "1.0"
futures = "0.3.1"
serde_json = "1.0"
actix-multipart = "0.6.0"
diesel_migrations = "2.0.0"
reqwest = {version = "0.11.15", features = ["multipart"]}
jsonwebtoken = "8.2.0"
tokio = "1.26.0"
bcrypt = "0.14.0"
base64 = "0.21.0"
ftp = "3.0.1"
bytes = "1.4.0"
actix-files = "0.6.2"
walkdir = "2.3.2"
log = "0.4.17"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"

#Remove this later
tar = "0.4.38"
flate2 = "1.0.25"
shm = "0.1.0"
actix-session = "0.7.2"
form-data = "0.4.2"
nix = { version = "0.16.0" }
libc = "0.2.140"
memmap = "0.7.0"